...
                android:layout_marginTop="8dp"
                android:text="Currency 2: --"
                android:textColor="#FFFFFF" />
        </androidx.appcompat.widget.Toolbar>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pieChart"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1A2561"
            android:text="Upload" />


        <Spinner
            android:id="@+id/spinner_family_members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.869" />

            <Button
                android:id="@+id/btn_show_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="307dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="403dp"
                android:autoSizeTextType="none"
                android:backgroundTint="#136EDD"
                android:text="≡"
                android:textSize="30dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="404dp"
                android:layout_marginEnd="73dp"
                android:backgroundTint="#1A2561"
                android:text="Submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText_amount"
                app:layout_constraintTop_toBottomOf="@+id/btn_show_popup" />

            <EditText
                android:id="@+id/editText_amount"
...
