<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#136EDD"
    tools:context=".FirstPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="MoneyFlow"
            android:textColor="#15CFE1"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.426"></TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="154dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.174"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/startup_guest_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginEnd="151dp"
            android:layout_marginBottom="188dp"
            android:backgroundTint="#1A2561"
            android:text="Guest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.633"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startup_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="#1A2561"
            android:text="Signup"
            app:layout_constraintBottom_toTopOf="@+id/startup_guest_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startup_login_btn" />

        <Button
            android:id="@+id/startup_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="7dp"
            android:backgroundTint="#1A2561"
            android:text="Login"
            app:layout_constraintBottom_toTopOf="@+id/startup_signup_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
