<resources>
    <string name="app_name">AndroidExample</string>
    <string name="upload_file">Upload File</string>
    <string name="menu">Menu</string>
    <string name="enter_monthly_income">Enter Monthly Income</string>
    <string name="submit">Submit</string>
    <string name="buy_now">Buy now</string>
    <string name="currency_rate">Currency Rate</string>
    <string-array name="categories_array">
        <item>personal</item>
...
